--- a/Editor/com.halodi.halodi-unity-package-registry-manager.Editor.asmdef
+++ b/Editor/com.halodi.halodi-unity-package-registry-manager.Editor.asmdef
@@ -1,9 +1,6 @@
 {
     "name": "com.halodi.halodi-unity-package-registry-manager.Editor",
-    "references": [
-        "com.halodi.halodi-unity-package-registry-manager.Runtime",
-        "Tomlyn"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -13,7 +10,7 @@
     "precompiledReferences": [
         "860BB79D.Newtonsoft.Json.dll",
         "860BB79D.SharpZipLib.dll",
-        "Tomlyn.dll"
+        "860BB79D.Tomlyn.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
